Added another line

--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,11 @@
 
 <body>
 
-Hello World Helloworld 
+    <h1 style="color:blue;text-align:center;">Welcome to my web page</h1>
+
+    <p> hello, world! This is a paragraph of text.</p>
+
+    <p> This is another paragraph</p>
 </body>
 
 
